# 454-hackathon

NFT/: index.js  start_server.bat
NFT/public/: index - Copy.html  index.html
NFT/public/data/: covid.txt  covid_variant.txt
NFT/public/scripts/: geometry.js
NFT/public/wasm/: dna_visualizer.d.ts  dna_visualizer.js  dna_visualizer_bg.wasm  dna_visualizer_bg.wasm.d.ts  package.json
NFT/rust/: Cargo.toml  build.bat
NFT/rust/src/: lib.rs
