[package]
name = "dna_visualizer"
version = "0.1.0"
authors = ["Ericka SIMON"]
description = "DNA 3D visualizer"
license = "MIT/Apache-2.0"
repository = "https://github.com/gablg1/454-hackathon/3d-dna-nft"
edition = "2018"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g']

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra-glm = "0.17.0"
